# cowen_current_favorites

./: README.md  application.js  index.html  locate_restaurants.py  locations.json  map_locations.html  map_locations.js  pyproject.toml  requirements.txt
.github/workflows/: update-locations.yml
