[project]
name = "cowen-current-favorites"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "geocoder (>=1.38,<2)",
    "lxml (>=5,<6)",
    "requests (>=2.21,<3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
